# Student-Performance-Prediction

./: Dockerfile  README.md  notebook.ipynb  predict.py  predict_test.py  pyproject.toml  train.py
