[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["rassel25 <36706178+rassel25@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
xgboost = "^2.0.2"
imbalanced-learn = "^0.11.0"
scikit-optimize = "^0.9.0"
flask = "^3.0.0"
requests = "^2.31.0"
waitress = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
awsebcli = "^3.20.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
